# chef-human

./: .gitignore  CLAUDE.md  PLAN.md  README.md  code_review_2026-07-03.md  config.toml  plan_1.1.md  plan_1.2.md  plan_1.3.md  plan_2.1.md  plan_2.2.md  plan_2.3.md  plan_3.1.md  plan_3.2.md  plan_3.3.md  plan_4.1.md  plan_4.2.md  plan_4.3.md  plan_4.4.md  plan_5.1.md  plan_5.2.md  prompts.txt  pyproject.toml
chef_human/: config.py  main.py
chef_human.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chef_human/agent/: __init__.py  context.py  file_context.py  hardware.py  linter.py  model_advisor.py  parser.py  persistence.py  planner.py  prompts.py  react_loop.py  repo_map.py  retry.py  scratchpad.py  watcher.py  workspace.py
chef_human/llm/: __init__.py  backend.py  chatml.py  embeddings.py  llamacpp_backend.py  ollama_backend.py  tokenizer.py
chef_human/tools/: __init__.py  diff-federate-safeBackup-0001.py  diff.py  filesystem.py  goto_definition.py  lint_fix.py  lookup_symbol.py  patch_tool.py  redo.py  refactor.py  reference_finder.py  registry.py  shell.py  undo.py  user.py  view_diff.py
chef_human/ui/: __init__.py  debug_tui.py  protocol.py  repl.py  (+2 more)
docs/: INSTALL.md  USAGE.md
scripts/: setup.sh
tests/: test_agent_integration.py  test_chatml.py  test_config.py  test_context_assembly.py  test_e2e.py  test_embeddings.py  test_file_context.py  test_integration.py  test_linter.py  test_llamacpp_backend.py  test_llm_backend.py  test_ollama_backend.py  test_repo_map.py  test_tokenizer.py  test_watcher.py  test_workspace.py
(+57 files in other folders)
