[project]
name = "chef-human"
version = "0.1.0"
description = "Local AI software development tool"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llamacpp = [
    "llama-cpp-python>=0.3.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
indexing = [
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
]
rag = [
    "faiss-cpu>=1.14",
    "numpy>=1.25",
]
tui = [
    "textual>=0.60",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
chef-human = "chef_human.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Ollama server with a model",
]
